src/hospital/.kubernetes/api_gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api_gateway
spec:
  selector:
    app: api-gateway
  type: LoadBalancer
  ports:
    - name: "443"
      port: 443
      targetPort: 443
    - name: "80"
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - image: api-gateway
          name: api-gateway
          ports:
            - containerPort: 443
              hostPort: 443
              protocol: TCP
            - containerPort: 80
              hostPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
