src/hospital/.kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - image: auth-service
          name: auth-service
          ports:
            - containerPort: 8081
              hostPort: 8081
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
