src/hospital/.kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: backend
          name: backend
          ports:
            - containerPort: 8082
              hostPort: 8082
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
