src/hospital/.kubernetes/blockchain-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: blockchain-node
spec:
   clusterIP: None
   type: ClusterIP
   ports:
   - protocol: TCP
     port: 8051
     targetPort: 8051
---
apiVersion: v1
kind: Endpoints
metadata:
  name: blockchain-node
subsets:
  - addresses:
    - ip: 192.168.43.52
    ports:
      - port: 8051
