src/hospital/.kubernetes/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: frontend
          name: frontend
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
