src/hospital/.kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: hospital1307/frontend:latest
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      dnsConfig:
        nameservers:
          - 8.8.8.8
      restartPolicy: Always
