src/hospital/.kubernetes/service-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      containers:
        - image: service-discovery
          name: service-discovery
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
      restartPolicy: Always
